--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.12.2",
+    "@aws-amplify/react-native": "^1.1.7",
+    "@aws-amplify/ui-react-native": "^2.4.5",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/stack": "^7.2.1",
+    "amazon-cognito-identity-js": "^6.3.12",
+    "aws-amplify": "^6.14.0",
+    "aws-amplify-react-native": "^7.0.8",
+    "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "react": "19.0.0",
-    "react-native": "0.78.1"
+    "react-google-places-autocomplete": "^4.1.0",
+    "react-native": "0.78.1",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-maps": "^1.20.1",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -25,8 +47,10 @@
     "@react-native/metro-config": "0.78.1",
     "@react-native/typescript-config": "0.78.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
+    "@types/react": "^19.0.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
