--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.78.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-localize": "^3.4.1",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
